--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 				<div class="card">
 					<img class="card-img-top" src="./img/frontend.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h2 class="card-title">Front End Development</h2>
+							<h2 class="card-title">Front End</h2>
 							
 						</div>
 				</div>
@@ -55,7 +55,7 @@
 				<div class="card">
 				<img class="card-img-top" src="./img/cnet.jpg" alt="Card image cap">
 						<div class="card-body">
-							<h2 class="card-title">Back End Development</h2>
+							<h2 class="card-title">Back End</h2>
 							
 						</div>
 				</div>
