--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 		
 		<div class="container text-center" id="contact">
 			<h1>CONTACT ME </h1>
-			<button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Check this out!" href="https://www.linkedin.com/in/miguel-colayco-12678b64">Visit my Linkedin page;
+			<button type="button" class="btn btn-secondary btn-info popover-dismiss" data-container="body" data-toggle="popover" data-placement="top" data-content="Check this out!" onclick="window.location.assign('https://www.linkedin.com/in/miguel-colayco-12678b64')">Visit my Linkedin page;
 			</button>
 		
 		</div>
